Fixed some display issues with different sized screens not wrapping the 5 day forecast between desktop and tablet screen sizes

--- a/style.css
+++ b/style.css
@@ -37,3 +37,9 @@ main{
 .box:not(:last-child){
     margin-bottom: 0rem;
 }
+
+@media screen and (max-width:1024px) {
+    #daily-forecast{
+        flex-direction:column;
+    }
+}
